--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.tuto.superheroes</groupId>
 	<artifactId>superheroes</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>2.2.0</version>
 	<name>superheroes</name>
 	<description>Proyecto de superheroes</description>
 	
